# oca-web

./: .gitignore  README.md
odoo-bringout-oca-web-web_action_conditionable/: README.md  pyproject.toml
odoo-bringout-oca-web-web_advanced_search/: README.md  pyproject.toml
odoo-bringout-oca-web-web_apply_field_style/: README.md  pyproject.toml
odoo-bringout-oca-web-web_calendar_slot_duration/: README.md  pyproject.toml
odoo-bringout-oca-web-web_calendar_slot_duration/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-web-web_chatter_position/: README.md  pyproject.toml
odoo-bringout-oca-web-web_company_color/: README.md  pyproject.toml
odoo-bringout-oca-web-web_copy_confirm/: README.md  pyproject.toml
odoo-bringout-oca-web-web_dark_mode/: README.md  pyproject.toml
odoo-bringout-oca-web-web_dashboard_tile/: README.md  pyproject.toml
odoo-bringout-oca-web-web_datetime_picker_default_time/: README.md  pyproject.toml
odoo-bringout-oca-web-web_dialog_size/: README.md  pyproject.toml
odoo-bringout-oca-web-web_disable_export_group/: README.md  pyproject.toml
odoo-bringout-oca-web-web_domain_field/: README.md  pyproject.toml
odoo-bringout-oca-web-web_editor_class_selector/: README.md  pyproject.toml
odoo-bringout-oca-web-web_environment_ribbon/: README.md  pyproject.toml
odoo-bringout-oca-web-web_field_numeric_formatting/: README.md  pyproject.toml
odoo-bringout-oca-web-web_field_tooltip/: README.md  pyproject.toml
odoo-bringout-oca-web-web_group_expand/: README.md  pyproject.toml
odoo-bringout-oca-web-web_help/: README.md  pyproject.toml
odoo-bringout-oca-web-web_hide_field_with_key/: README.md  pyproject.toml
odoo-bringout-oca-web-web_ir_actions_act_multi/: README.md  pyproject.toml
odoo-bringout-oca-web-web_ir_actions_act_window_message/: README.md  pyproject.toml
odoo-bringout-oca-web-web_ir_actions_act_window_page/: README.md  pyproject.toml
odoo-bringout-oca-web-web_ir_actions_close_wizard_refresh_view/: README.md  pyproject.toml
odoo-bringout-oca-web-web_listview_range_select/: README.md  pyproject.toml
odoo-bringout-oca-web-web_m2x_options/: README.md  pyproject.toml
odoo-bringout-oca-web-web_m2x_options_manager/: README.md  pyproject.toml
odoo-bringout-oca-web-web_no_bubble/: README.md  pyproject.toml
odoo-bringout-oca-web-web_notify/: README.md  pyproject.toml
odoo-bringout-oca-web-web_notify_channel_message/: README.md  pyproject.toml
odoo-bringout-oca-web-web_notify_channel_message/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-web-web_notify_channel_message/web_notify_channel_message/i18n/: bs.po
odoo-bringout-oca-web-web_notify_upgrade/: README.md  pyproject.toml
odoo-bringout-oca-web-web_pivot_computed_measure/: README.md  pyproject.toml
odoo-bringout-oca-web-web_pwa_oca/: README.md  pyproject.toml
odoo-bringout-oca-web-web_quick_start_screen/: README.md  pyproject.toml
odoo-bringout-oca-web-web_refresher/: README.md  pyproject.toml
odoo-bringout-oca-web-web_remember_tree_column_width/: README.md  pyproject.toml
odoo-bringout-oca-web-web_responsive/: README.md  pyproject.toml
odoo-bringout-oca-web-web_save_discard_button/: README.md  pyproject.toml
odoo-bringout-oca-web-web_search_with_and/: README.md  pyproject.toml
odoo-bringout-oca-web-web_select_all_companies/: README.md  pyproject.toml
odoo-bringout-oca-web-web_send_message_popup/: README.md  pyproject.toml
odoo-bringout-oca-web-web_sheet_full_width/: README.md  pyproject.toml
odoo-bringout-oca-web-web_systray_button_init_action/: README.md  pyproject.toml
odoo-bringout-oca-web-web_theme_classic/: README.md  pyproject.toml
odoo-bringout-oca-web-web_time_range_menu_custom/: README.md  pyproject.toml
odoo-bringout-oca-web-web_timeline/: README.md  pyproject.toml
odoo-bringout-oca-web-web_touchscreen/: README.md  pyproject.toml
odoo-bringout-oca-web-web_tree_duplicate/: README.md  pyproject.toml
odoo-bringout-oca-web-web_tree_dynamic_colored_field/: README.md  pyproject.toml
odoo-bringout-oca-web-web_tree_dynamic_colored_field/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-web-web_tree_many2one_clickable/: README.md  pyproject.toml
odoo-bringout-oca-web-web_tree_many2one_clickable/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-web-web_widget_bokeh_chart/: README.md  pyproject.toml
odoo-bringout-oca-web-web_widget_char_size/: README.md  pyproject.toml
odoo-bringout-oca-web-web_widget_datepicker_fulloptions/: README.md  pyproject.toml
odoo-bringout-oca-web-web_widget_domain_editor_dialog/: README.md  pyproject.toml
odoo-bringout-oca-web-web_widget_dropdown_dynamic/: README.md  pyproject.toml
odoo-bringout-oca-web-web_widget_image_download/: README.md  (+1 more)
(+550 files in other folders)
